# fastapi-sqlalchemy-template

./: .env.example  Pipfile  README.md  compose-dev.yml  compose.yml  dev.env  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
docker/dev/: Dockerfile
docker/prod/: Dockerfile  Postgres.Dockerfile
web/: main.py
web/app/: ioc.py  main.py
web/app/api/: auth.py  dependencies.py  users.py
web/app/core/: config.py  security.py
web/app/db/: models.py  resources.py
web/app/repositories/: __init__.py  base.py  users.py
web/app/schemas/: auth.py  users.py
web/app/tasks/: broker.py  tasks.py
web/app/utils/: fastapi.py  functions.py
web/core/: config.py  security.py
web/db/: base.py  users.py
web/endpoints/: auth.py  depends.py  users.py
web/ext/: databases.py
web/models/: users.py
web/repositories/: base.py  users.py
web/routers/: users.py
web/schemas/: users.py
